// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home view should render correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      dataSet={{}}
      style={
        {
          "flex": 1,
          "paddingLeft": 24,
          "paddingRight": 24,
        }
      }
    >
      <View
        dataSet={{}}
        style={
          {
            "flexDirection": "row",
            "marginTop": 8,
            "width": "100%",
          }
        }
      >
        <Image
          accessibilityLabel="Foto do usuário"
          alt="Foto do usuário"
          dataSet={{}}
          onError={[Function]}
          source={
            {
              "uri": "http://192.168.1.2:3333/images/user_avatar.jpg",
            }
          }
          style={
            {
              "borderColor": "#647AC7",
              "borderRadius": 9999,
              "borderWidth": 2,
              "height": 48,
              "maxWidth": "100%",
              "width": 48,
            }
          }
          testID="user-photo"
        />
        <View
          dataSet={{}}
          style={{}}
        />
        <View
          dataSet={{}}
          style={
            {
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 8,
              "paddingRight": 8,
            }
          }
        >
          <Text
            dataSet={{}}
            style={
              {
                "backgroundColor": undefined,
                "color": "#1A181B",
                "fontFamily": "Karla_400Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "textDecorationLine": undefined,
              }
            }
          >
            Boas vindas,
          </Text>
          <View
            dataSet={{}}
            style={{}}
          />
          <Text
            dataSet={{}}
            style={
              {
                "backgroundColor": undefined,
                "color": "#1A181B",
                "fontFamily": "Karla_700Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "textDecorationLine": undefined,
              }
            }
          >
            John Doe
          </Text>
        </View>
        <View
          dataSet={{}}
          style={{}}
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          colorScheme="primary"
          dataSet={{}}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1A181B",
              "borderRadius": 6,
              "flex": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            dataSet={{}}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
            test={true}
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="16"
              bbWidth="16"
              color="#EDECEE"
              focusable={false}
              height={16}
              meetOrSlice={0}
              minX={0}
              minY={0}
              size={16}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    undefined,
                    undefined,
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              tintColor="#EDECEE"
              vbHeight={256}
              vbWidth={256}
              width={16}
            >
              <RNSVGGroup>
                <RNSVGRect
                  fill={null}
                  height="256"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="256"
                  x="0"
                  y="0"
                />
                <RNSVGLine
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4293782766,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="16"
                  x1="40"
                  x2="216"
                  y1="128"
                  y2="128"
                />
                <RNSVGLine
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4293782766,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="16"
                  x1="128"
                  x2="128"
                  y1="40"
                  y2="216"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              dataSet={{}}
              style={
                {
                  "width": 6,
                }
              }
            />
            <View
              dataSet={{}}
              style={{}}
            >
              <Text
                dataSet={{}}
                style={
                  {
                    "backgroundColor": undefined,
                    "color": "#FFFFFF",
                    "fontFamily": "Karla_700Bold",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 21,
                    "textDecorationLine": undefined,
                  }
                }
              >
                Criar anúncio
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#5F5B62",
            "fontFamily": "Karla_400Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "marginBottom": 8,
            "marginTop": 24,
            "textDecorationLine": undefined,
          }
        }
      >
        Seus produtos anunciados para venda
      </Text>
      <View
        dataSet={{}}
        style={{}}
      />
      <View
        dataSet={{}}
        fadeDuration={0.1}
        speed={1}
        style={
          {
            "backgroundColor": "#9F9BA1",
            "borderRadius": 6,
            "height": 64,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#5F5B62",
              "height": "100%",
              "opacity": 0,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#5F5B62",
            "fontFamily": "Karla_400Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "marginBottom": 8,
            "marginTop": 24,
            "textDecorationLine": undefined,
          }
        }
      >
        Compre produtos variados
      </Text>
      <View
        dataSet={{}}
        style={{}}
      />
      <View
        dataSet={{}}
        style={
          {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          dataSet={{}}
          isFocused={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#F7F7F8",
              "borderColor": "#d4d4d4",
              "borderRadius": 4,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 45,
              "overflow": "hidden",
            }
          }
        >
          <TextInput
            accessibilityDescribedBy="field-2-feedback"
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            dataSet={{}}
            disabled={false}
            editable={true}
            isRequired={false}
            nativeID="field-2-input"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={
              [MockFunction] {
                "calls": [
                  [],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              }
            }
            placeholder="Buscar anúncio"
            placeholderTextColor="#9F9BA1"
            readOnly={false}
            required={false}
            returnKeyType="search"
            secureTextEntry={false}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#1A181B",
                "flex": 1,
                "fontFamily": undefined,
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "height": "100%",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
                "width": "100%",
              }
            }
            value=""
          />
          <View
            dataSet={{}}
            style={{}}
          />
          <View
            dataSet={{}}
            style={
              {
                "flexDirection": "row",
                "marginRight": 16,
                "width": 64,
              }
            }
          >
            <View
              dataSet={{}}
              style={
                {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                dataSet={{}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="20"
                  bbWidth="20"
                  color="#3E3A40"
                  focusable={false}
                  height={20}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={20}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      [
                        undefined,
                        undefined,
                        {},
                      ],
                      {
                        "flex": 0,
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                  tintColor="#3E3A40"
                  vbHeight={256}
                  vbWidth={256}
                  width={20}
                >
                  <RNSVGGroup>
                    <RNSVGRect
                      fill={null}
                      height="256"
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width="256"
                      x="0"
                      y="0"
                    />
                    <RNSVGCircle
                      cx="116"
                      cy="116"
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      r="84"
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="175.4"
                      x2="224"
                      y1="175.4"
                      y2="224"
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <View
                aria-orientation="vertical"
                dataSet={{}}
                style={
                  {
                    "backgroundColor": "#9F9BA1",
                    "height": "100%",
                    "width": 1,
                  }
                }
                thickness="1"
              />
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                dataSet={{}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="20"
                  bbWidth="20"
                  color="#3E3A40"
                  focusable={false}
                  height={20}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={20}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      [
                        undefined,
                        undefined,
                        {},
                      ],
                      {
                        "flex": 0,
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                  tintColor="#3E3A40"
                  vbHeight={256}
                  vbWidth={256}
                  width={20}
                >
                  <RNSVGGroup>
                    <RNSVGRect
                      fill={null}
                      height="256"
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width="256"
                      x="0"
                      y="0"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="128"
                      x2="128"
                      y1="120"
                      y2="216"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="128"
                      x2="128"
                      y1="40"
                      y2="88"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="200"
                      x2="200"
                      y1="200"
                      y2="216"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="200"
                      x2="200"
                      y1="40"
                      y2="168"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="224"
                      x2="176"
                      y1="168"
                      y2="168"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="56"
                      x2="56"
                      y1="168"
                      y2="216"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="56"
                      x2="56"
                      y1="40"
                      y2="136"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="32"
                      x2="80"
                      y1="136"
                      y2="136"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="152"
                      x2="104"
                      y1="88"
                      y2="88"
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
      <View
        dataSet={{}}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#EDECEE",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          accessibilityLabel="loading"
          accessible={true}
          color="#364D9D"
          size="small"
          style={
            [
              [
                {},
                {
                  "dataSet": {},
                },
                {},
              ],
              undefined,
            ]
          }
        />
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RNCSafeAreaProvider>
`;

exports[`Home view should render correctly with search value 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      dataSet={{}}
      style={
        {
          "flex": 1,
          "paddingLeft": 24,
          "paddingRight": 24,
        }
      }
    >
      <View
        dataSet={{}}
        style={
          {
            "flexDirection": "row",
            "marginTop": 8,
            "width": "100%",
          }
        }
      >
        <Image
          accessibilityLabel="Foto do usuário"
          alt="Foto do usuário"
          dataSet={{}}
          onError={[Function]}
          source={
            {
              "uri": "http://192.168.1.2:3333/images/user_avatar.jpg",
            }
          }
          style={
            {
              "borderColor": "#647AC7",
              "borderRadius": 9999,
              "borderWidth": 2,
              "height": 48,
              "maxWidth": "100%",
              "width": 48,
            }
          }
          testID="user-photo"
        />
        <View
          dataSet={{}}
          style={{}}
        />
        <View
          dataSet={{}}
          style={
            {
              "flex": 1,
              "justifyContent": "center",
              "paddingLeft": 8,
              "paddingRight": 8,
            }
          }
        >
          <Text
            dataSet={{}}
            style={
              {
                "backgroundColor": undefined,
                "color": "#1A181B",
                "fontFamily": "Karla_400Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "textDecorationLine": undefined,
              }
            }
          >
            Boas vindas,
          </Text>
          <View
            dataSet={{}}
            style={{}}
          />
          <Text
            dataSet={{}}
            style={
              {
                "backgroundColor": undefined,
                "color": "#1A181B",
                "fontFamily": "Karla_700Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "textDecorationLine": undefined,
              }
            }
          >
            John Doe
          </Text>
        </View>
        <View
          dataSet={{}}
          style={{}}
        />
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          colorScheme="primary"
          dataSet={{}}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1A181B",
              "borderRadius": 6,
              "flex": 1,
              "flexDirection": "row",
              "height": 45,
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 12,
              "paddingRight": 12,
              "paddingTop": 10,
              "width": "100%",
            }
          }
        >
          <View
            dataSet={{}}
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
            test={true}
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight="16"
              bbWidth="16"
              color="#EDECEE"
              focusable={false}
              height={16}
              meetOrSlice={0}
              minX={0}
              minY={0}
              size={16}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  [
                    undefined,
                    undefined,
                    {},
                  ],
                  {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              tintColor="#EDECEE"
              vbHeight={256}
              vbWidth={256}
              width={16}
            >
              <RNSVGGroup>
                <RNSVGRect
                  fill={null}
                  height="256"
                  propList={
                    [
                      "fill",
                    ]
                  }
                  width="256"
                  x="0"
                  y="0"
                />
                <RNSVGLine
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4293782766,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="16"
                  x1="40"
                  x2="216"
                  y1="128"
                  y2="128"
                />
                <RNSVGLine
                  fill={null}
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4293782766,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="16"
                  x1="128"
                  x2="128"
                  y1="40"
                  y2="216"
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              dataSet={{}}
              style={
                {
                  "width": 6,
                }
              }
            />
            <View
              dataSet={{}}
              style={{}}
            >
              <Text
                dataSet={{}}
                style={
                  {
                    "backgroundColor": undefined,
                    "color": "#FFFFFF",
                    "fontFamily": "Karla_700Bold",
                    "fontSize": 14,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 21,
                    "textDecorationLine": undefined,
                  }
                }
              >
                Criar anúncio
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#5F5B62",
            "fontFamily": "Karla_400Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "marginBottom": 8,
            "marginTop": 24,
            "textDecorationLine": undefined,
          }
        }
      >
        Seus produtos anunciados para venda
      </Text>
      <View
        dataSet={{}}
        style={{}}
      />
      <View
        dataSet={{}}
        fadeDuration={0.1}
        speed={1}
        style={
          {
            "backgroundColor": "#9F9BA1",
            "borderRadius": 6,
            "height": 64,
            "overflow": "hidden",
            "width": "100%",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "#5F5B62",
              "height": "100%",
              "opacity": 0.0006205664881961128,
              "width": "100%",
            }
          }
        />
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
      <Text
        dataSet={{}}
        style={
          {
            "backgroundColor": undefined,
            "color": "#5F5B62",
            "fontFamily": "Karla_400Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 21,
            "marginBottom": 8,
            "marginTop": 24,
            "textDecorationLine": undefined,
          }
        }
      >
        Compre produtos variados
      </Text>
      <View
        dataSet={{}}
        style={{}}
      />
      <View
        dataSet={{}}
        style={
          {
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <View
          dataSet={{}}
          isFocused={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#F7F7F8",
              "borderColor": "#d4d4d4",
              "borderRadius": 4,
              "borderWidth": 0,
              "flexDirection": "row",
              "height": 45,
              "overflow": "hidden",
            }
          }
        >
          <TextInput
            accessibilityDescribedBy="field-5-feedback"
            accessible={true}
            autoComplete="off"
            autoCorrect={false}
            dataSet={{}}
            disabled={false}
            editable={true}
            isRequired={false}
            nativeID="field-5-input"
            onBlur={[Function]}
            onChangeText={[MockFunction]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            onSubmitEditing={
              [MockFunction] {
                "calls": [
                  [],
                ],
                "results": [
                  {
                    "type": "return",
                    "value": undefined,
                  },
                ],
              }
            }
            placeholder="Buscar anúncio"
            placeholderTextColor="#9F9BA1"
            readOnly={false}
            required={false}
            returnKeyType="search"
            secureTextEntry={false}
            style={
              {
                "backgroundColor": "transparent",
                "color": "#1A181B",
                "flex": 1,
                "fontFamily": undefined,
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "400",
                "height": "100%",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
                "width": "100%",
              }
            }
            value="bicicleta"
          />
          <View
            dataSet={{}}
            style={{}}
          />
          <View
            dataSet={{}}
            style={
              {
                "flexDirection": "row",
                "marginRight": 16,
                "width": 64,
              }
            }
          >
            <View
              dataSet={{}}
              style={
                {
                  "display": "flex",
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                dataSet={{}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="20"
                  bbWidth="20"
                  color="#3E3A40"
                  focusable={false}
                  height={20}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={20}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      [
                        undefined,
                        undefined,
                        {},
                      ],
                      {
                        "flex": 0,
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                  tintColor="#3E3A40"
                  vbHeight={256}
                  vbWidth={256}
                  width={20}
                >
                  <RNSVGGroup>
                    <RNSVGRect
                      fill={null}
                      height="256"
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width="256"
                      x="0"
                      y="0"
                    />
                    <RNSVGCircle
                      cx="116"
                      cy="116"
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      r="84"
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="175.4"
                      x2="224"
                      y1="175.4"
                      y2="224"
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
              <View
                aria-orientation="vertical"
                dataSet={{}}
                style={
                  {
                    "backgroundColor": "#9F9BA1",
                    "height": "100%",
                    "width": 1,
                  }
                }
                thickness="1"
              />
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                dataSet={{}}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "flex-end",
                    "flex": 1,
                  }
                }
              >
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight="20"
                  bbWidth="20"
                  color="#3E3A40"
                  focusable={false}
                  height={20}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  size={20}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      [
                        undefined,
                        undefined,
                        {},
                      ],
                      {
                        "flex": 0,
                        "height": 20,
                        "width": 20,
                      },
                    ]
                  }
                  tintColor="#3E3A40"
                  vbHeight={256}
                  vbWidth={256}
                  width={20}
                >
                  <RNSVGGroup>
                    <RNSVGRect
                      fill={null}
                      height="256"
                      propList={
                        [
                          "fill",
                        ]
                      }
                      width="256"
                      x="0"
                      y="0"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="128"
                      x2="128"
                      y1="120"
                      y2="216"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="128"
                      x2="128"
                      y1="40"
                      y2="88"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="200"
                      x2="200"
                      y1="200"
                      y2="216"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="200"
                      x2="200"
                      y1="40"
                      y2="168"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="224"
                      x2="176"
                      y1="168"
                      y2="168"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="56"
                      x2="56"
                      y1="168"
                      y2="216"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="56"
                      x2="56"
                      y1="40"
                      y2="136"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="32"
                      x2="80"
                      y1="136"
                      y2="136"
                    />
                    <RNSVGLine
                      fill={null}
                      propList={
                        [
                          "fill",
                          "stroke",
                          "strokeWidth",
                          "strokeLinecap",
                          "strokeLinejoin",
                        ]
                      }
                      stroke={
                        {
                          "payload": 4282268224,
                          "type": 0,
                        }
                      }
                      strokeLinecap={1}
                      strokeLinejoin={1}
                      strokeWidth="16"
                      x1="152"
                      x2="104"
                      y1="88"
                      y2="88"
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
      <View
        dataSet={{}}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#EDECEE",
            "display": "flex",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          accessibilityLabel="loading"
          accessible={true}
          color="#364D9D"
          size="small"
          style={
            [
              [
                {},
                {
                  "dataSet": {},
                },
                {},
              ],
              undefined,
            ]
          }
        />
      </View>
      <View
        dataSet={{}}
        style={{}}
      />
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</RNCSafeAreaProvider>
`;
